--- a/index.html
+++ b/index.html
@@ -1,9 +1,145 @@
-NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
-things Essential JavaScript development tools that help you go to market faster and build powerful applications using
-modern open source code. See plans Join for free Bring the best of open source to your company npm is the tool used by
-over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it.
-Create an Org and get more out of the tools your team already knows and loves. Zero configuration Create an org, add
-your team, and start collaborating. Nothing to configure, set up, or manage. Team management Control who has access to
-what modules within your team namespace using straightforward team management capabilities. Familiar features npm Orgs
-has 100% parity with all the public npm registry features your developers already use. npm audit Enjoy the security
-auditing features built into the npm client, a zero-friction way to make open source software safer. Create an Org
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simple</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <header>
+      <div>
+        <div>
+          <img
+            class="blackHeart"
+            src="./images/black-heart.png"
+            alt="black heart"
+          />
+          <span>Neverending Pun Machine</span>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#"> npm Enterprise </a></li>
+            <li><a href="#"> Products </a></li>
+            <li><a href="#"> Solutions </a></li>
+            <li><a href="#"> Resources </a></li>
+            <li><a href="#"> Docs </a></li>
+            <li><a href="#"> Support </a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="wrapper-search">
+        <img class="npm-logo" src="./images/npm-logo.png" alt="logo" />
+        <div class="wrapper-search-form">
+          <img
+            class="img-search"
+            src="./images/magnifying-glass.png"
+            alt="magnifying-glass"
+          />
+          <form class="search-form" action="#" method="get">
+            <input
+              type="text"
+              name="search-form"
+              id="search-form"
+              placeholder="Search packages"
+            />
+            <label class="btn search-btn" for="search-form">Search</label>
+          </form>
+        </div>
+        <div class="btn-wrapper">
+          <a class="link-btn border-btn" href="#">Join</a>
+          <a class="link-btn" href="#">Log In</a>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="main-info section-first">
+        <h1 class="main-header">Build amazing things</h1>
+        <article class="main-article">
+          <p>
+            Essential Javascript development tools that help <br />you go to
+            market faster and build powerful <br />
+            applications using modern open source code
+          </p>
+        </article>
+        <div>
+          <a class="btn-main link-btn" href="#">See plans</a>
+          <a class="link-btn btn-link" href="#">Join for free</a>
+        </div>
+      </section>
+      <section class="main-info">
+        <img
+          id="triangle-pic"
+          src="./images/triangle-hexagon.svg"
+          alt="triangle-hexagon"
+        />
+        <div class="header-wrapper">
+          <h2 class="header">Bring the best of open source to your company</h2>
+        </div>
+        <article>
+          <p>
+            npm is the tool used by over 11,000,000 JavaScript developers around
+            the world. Your developers <br />
+            already use it. Your company depends on it. Create an Org and get
+            more out of the tools your <br />
+            team already knows and loves.
+          </p>
+        </article>
+      </section>
+      <section class="main-info section-third">
+        <div class="product-info">
+          <div class="product-info-child">
+            <img
+              class="product-info-img"
+              src="./images/zero-configuration.svg"
+              alt="pointing arrow"
+            />
+            <h3>Zero configuration</h3>
+            <p>
+              Create an Org, add your team,<br /> and start collaborating.
+              <br />
+              Nothing to configure, set up, or<br /> manage.
+            </p>
+          </div>
+          <div class="product-info-child">
+            <img
+              class="product-info-img"
+              src="./images/team-management.svg"
+              alt="svg-picture"
+            />
+            <h3>Team management</h3>
+            <p>
+              Control who has access to<br />what modules within your<br />team namespace
+              using<br />straightforward team<br />management capabilities.
+            </p>
+          </div>
+          <div class="product-info-child">
+            <img
+              class="product-info-img"
+              src="./images/familiar-features.svg"
+              alt="svg-picture"
+            />
+            <h3>Familiar features</h3>
+            <p>
+              npm Orgs has 100% parity with<br />all the public npm registry<br />features
+              your developers<br />already use.
+            </p>
+          </div>
+          <div class="product-info-child">
+            <img
+              class="product-info-img"
+              src="./images/npm-audit.svg"
+              alt="svg-picture"
+            />
+            <h3>npm audit</h3>
+            <p>
+              Enjoy the security auditing<br />features built into npm<br />client, a
+              zero-friction way to<br>open source software<br />safer.
+            </p>
+          </div>
+        </div>
+        <button class="create-org-btn" type="button">Create an Org</button>
+      </section>
+    </main>
+  </body>
+</html>
